--- a/SGF.PRESENTACION/Recursos/Plantillas/plantillaDetalle_Compras.html
+++ b/SGF.PRESENTACION/Recursos/Plantillas/plantillaDetalle_Compras.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
     <title>Title of the document</title>
     <style>
         table.border {
@@ -28,15 +29,14 @@
                     <tr><td align="center">Direccion: @DireccionNegocio</td></tr>
                     <tr><td align="center">Telefono: @TelefonoNegocio</td></tr>
                     <tr><td align="center">Email: @EmailNegocio</td></tr>
-                
+
                 </table>
 
             </td>
             <td style="width:20%">
                 <table class="border" style="width:100%">
-                    <tr><td align="center">CUIT/CUIL: @CUILCUITNegocio</td></tr>
-                    <tr><td align="center" style="background-color:#D8D8D8">@TipoDocumento</td></tr>
-                    <tr><td align="center">Folio: @FolioCompra</td></tr>
+                    <tr><td align="center" style="background-color:#D8D8D8">Folio: @FolioCompra</td></tr>
+                    <tr><td align="center">@TipodeComprobante</td></tr>
                 </table>
             </td>
         </tr>
@@ -48,15 +48,15 @@
                 <table style="width:100%">
                     <tr>
                         <td colspan="1" style="width:20%">Proveedor:</td>
-                        <td colspan="3" style="width:80%;border-bottom:1px solid black">@CLIENTE</td>
+                        <td colspan="3" style="width:80%;border-bottom:1px solid black">@ProveedorCompra</td>
                     </tr>
                 </table>
                 <table style="width:100%">
                     <tr>
                         <td style="width:20%">Documento:</td>
-                        <td style="width:30%;border-bottom:1px solid black">@DOCUMENTO</td>
+                        <td style="width:30%;border-bottom:1px solid black">@DocumentoProveedor</td>
                         <td style="width:10%">Fecha:</td>
-                        <td style="width:40%;border-bottom:1px solid black">@FECHA</td>
+                        <td style="width:40%;border-bottom:1px solid black">@FechaCompra</td>
                     </tr>
                 </table>
             </td>
@@ -70,7 +70,7 @@
                 <table class="border" style="width:100%;">
                     <thead>
                         <tr style="background-color:#D8D8D8">
-                            <th>Código</th>
+                            <th>@ColumnaCodigo</th>
                             <th>Producto</th>
                             <th>Cantidad comprada</th>
                             <th>Precio de compra</th>
@@ -90,6 +90,28 @@
                 </table>
             </td>
         </tr>
+        <tr>
+        </tr>
+            <!--Necesito una tabla para decir el @NombreyApellido del usuario y también necesito ingresar el documento del usuario @Documento-->
+        <tr>
+            <td colspan="3">
+                <table style="width:100%">
+                    <tr>
+                        <td style="width:20%">Recibido por:</td>
+                        <td style="width:80%;border-bottom:1px solid black">@NombreyApellido</td>
+                    </tr>
+                </table>
+                <table style="width:100%">
+                    <tr>
+                        <td style="width:20%">Documento:</td>
+                        <td style="width:30%;border-bottom:1px solid black">@Documento</td>
+                        <td style="width:10%">Fecha:</td>
+                        <td style="width:40%;border-bottom:1px solid black">@Fecha</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+
     </table>
 </body>
 </html>
